Switching to an off screen canvas to avoid scrolling issues

--- a/css/stylo.css
+++ b/css/stylo.css
@@ -1,6 +1,8 @@
 body {
   margin: 0px;
   padding: 0px;
+  /*width: 300px;
+  height: 300px;*/
     overflow: hidden;
 }
 h1 {
@@ -9,15 +11,14 @@ h1 {
   padding-top: 0px;
 }
 #viewport {
-  /*width: 100%;
-  height: 100%;*/
-  /*border: solid 1px black;*/
-
-  position: relative;
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 #canvas {
-
-  transform: translate(0px, 0);
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 #background {
 
